# tako

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml  release.yml
spec/: api-sketch.md  architecture-sketch.md  execution-checklist.md  plan.md  protocol-draft.md  tech-research-checklist.md
src/: lib.rs
src/api/: mod.rs
src/codec/: mod.rs
src/observability/: mod.rs
src/protocol/: mod.rs
src/runtime/: mod.rs
src/transport/: mod.rs  unix.rs  windows_named_pipe.rs
tests/: api_tests.rs  api_unix_e2e_tests.rs  api_windows_e2e_tests.rs  codec_tests.rs  protocol_tests.rs  transport_unix_tests.rs  transport_windows_tests.rs
