[package]
name = "tako-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "net"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
